static/css/chat.css
body,html{
    width: 100%;
    height: 100%;
    margin: 0;
    font-size: small;
    /* background-image: url("/img/bg.jpg"); */
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
}

/* Inspection code
* {
    border: 1px solid #f00 !important;
  } */

a {
    cursor: pointer;
}

h2 {
font-size: 24px;
text-transform: uppercase;
color: #303030;
font-weight: 600;
margin-bottom: 30px;
}
h4 {
font-size: 19px;
line-height: 1.375em;
color: #303030;
font-weight: 400;
margin-bottom: 30px;
}  
.jumbotron {
background-color: light;
padding: 100px 25px;
font-family: Montserrat, sans-serif;
}
.container-fluid {
padding: 60px 50px;
}
.bg-grey {
background-color: #f6f6f6;
}
.logo-small {
color: #f4511e;
font-size: 50px;
}
.logo {
color: #f4511e;
font-size: 200px;
}
.thumbnail {
padding: 0 0 15px 0;
border: none;
border-radius: 0;
}
.thumbnail img {
width: 100%;
height: 100%;
margin-bottom: 10px;
}
.carousel-control.right, .carousel-control.left {
background-image: url("/img/bg.jpg");
color: #f4511e;
}
.carousel-indicators li {
border-color: #f4511e;
}
.carousel-indicators li.active {
background-color: #f4511e;
}
.item h4 {
font-size: 19px;
line-height: 1.375em;
font-weight: 400;
font-style: italic;
margin: 70px 0;
}
.item span {
font-style: normal;
}
.panel {
border: 1px solid #f4511e; 
border-radius:0 !important;
transition: box-shadow 0.5s;
}
.panel:hover {
box-shadow: 5px 0px 40px rgba(0,0,0, .2);
}
.panel-footer .btn:hover {
border: 1px solid #f4511e;
background-color: #fff !important;
color: #f4511e;
}
.panel-heading {
color: #fff !important;
background-color: #f4511e !important;
padding: 25px;
border-bottom: 1px solid transparent;
border-top-left-radius: 0px;
border-top-right-radius: 0px;
border-bottom-left-radius: 0px;
border-bottom-right-radius: 0px;
}
.panel-footer {
background-color: white !important;
}
.panel-footer h3 {
font-size: 32px;
}
.panel-footer h4 {
color: #aaa;
font-size: 14px;
}
.panel-footer .btn {
margin: 15px 0;
background-color: #f4511e;
color: #fff;
}

footer .glyphicon {
font-size: 20px;
margin-bottom: 20px;
color: #f4511e;
}
.slideanim {visibility:hidden;}
.slide {
animation-name: slide;
-webkit-animation-name: slide;
animation-duration: 1s;
-webkit-animation-duration: 1s;
visibility: visible;
}
@keyframes slide {
0% {
    opacity: 0;
    transform: translateY(70%);
} 
100% {
    opacity: 1;
    transform: translateY(0%);
}
}
@-webkit-keyframes slide {
0% {
    opacity: 0;
    -webkit-transform: translateY(70%);
} 
100% {
    opacity: 1;
    -webkit-transform: translateY(0%);
}
}
@media screen and (max-width: 768px) {
.col-sm-4 {
    text-align: center;
    margin: 25px 0;
}
.btn-lg {
    width: 100%;
    margin-bottom: 35px;
}
}
@media screen and (max-width: 768px) {
.logo {
    font-size: 150px;
}
}

.agent-icon{
    width: 16px;
    margin-left: 2px;
    cursor: pointer;
}

.chat{
    position: fixed;
    bottom: 0;
    right: 0;
    margin-top: 0;
    margin-right: 20px;
    width: 30%;
    height: 80%;
    opacity: 0;
}

.chat-img{
    max-width: 40px;
    cursor: pointer;
}

.toggle-chat-btn{
    z-index: 1;
    position: fixed;
    margin-right: 20px;
    margin-bottom: 20px;
    right: 0;
    bottom: 0;
}
.chat-ease-in{
    animation:mymove 3s ease-in forwards;
    -webkit-animation:mymove 3s;
}

.card{
    height: 100%;
    border-radius: 15px !important;
    background-color: rgba(0,0,0,0.8) !important;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#close{
    margin: 0 !important;
    position: absolute;
    right: 0;
    top: 0;
    border-radius: 20px !important;
    border-color: transparent !important;    
    background-color: transparent !important;
}

.msg_card_body{
    position: relative;
    overflow-y: auto;
}
.card-header{
    position: relative;
    border-radius: 15px 15px 0 0 !important;
    border-bottom: 0 !important;
    height: 10%;
}
.card-footer{
    position: relative;
    border-radius: 0 0 15px 15px !important;
    border-top: 0 !important;
}
.container{
    align-content: center;
}

#sendBtn{
    max-width: 1.5vw;
}

.type_msg{
    background-color: rgba(0,0,0,0.3) !important;
    border:0 !important;
    color:white !important;
    overflow-y: auto;
    box-shadow:none !important;
    outline:0px !important;
}

#emoji-button{
    margin: 0 !important;
    background-color: rgba(0,0,0,0.3) !important;
    border: 0 !important;
    color: white !important;
    box-shadow: none !important;
    outline: 0px !important;;
}

.msg_cotainer{
    display: inline-block;
    margin-top: 20px;
    margin-bottom: 10px;
    margin-left: 10px;
    border-radius: 15px;
    background-color: #82ccdd;
    padding: 10px;
    position: relative;
    text-align: left;
    white-space: normal;
}
.msg_cotainer_send{
    display: inline-block;
    margin-top: 20px;
    margin-bottom: 10px;
    margin-right: 10px;
    border-radius: 15px;
    background-color: #78e08f;
    padding: 10px;
    position: relative;
    text-align: right;
    white-space: normal;
}
.msg_time{
    position: relative;
    left: 15;
    color: rgba(255,255,255,0.5);
    font-size: 10px;
    overflow-x: visible;
    text-align: left;
    overflow-wrap: normal;
    white-space: nowrap;
    margin-left: 15px;
}
.msg_disconnect{
    position: relative;
    left: 15;
    color: #f87474;
    font-size: 10px;
    overflow-x: visible;
    text-align: left;
    overflow-wrap: normal;
    cursor: pointer;
    white-space: nowrap;
}
.msg_time_send{
    position: relative;
    right: 15px;
    color: rgba(255,255,255,0.5);
    text-align: right;
    font-size: 10px;
    overflow-x: visible;
    overflow-wrap: normal;
    white-space: nowrap;
}
.msg_body{
    position: relative;
}
.msg_head{
    position: relative;
    color: rgba(255,255,255,0.5);
    font-size: 10px;
    left: 15px;
    top: 15px;
    white-space: nowrap;
    overflow-x: visible;
    text-align: left;
}
.msg_head_send{
    position: relative;
    color: rgba(255,255,255,0.5);
    font-size: 10px;
    right: 15px;
    top: 15px;
    white-space: nowrap;
    overflow-x: visible;
    text-align: right;
}
.chat-btn{
    max-width: 100px;
    color: white;
    margin: 0.5rem;
    margin-left: 2rem;
}
.user_info{
    position: absolute;
    top: 1vw;
    font-size: 1vw;
    font-family: Arial, Helvetica, sans-serif;
    font-style: initial;
    color: azure;
}

button{
    margin: 2px;
    outline: none;
}

.input-group{
    position: relative !important;
}

input[type='text']{
    font-size: small;
}

.input-group-text{
    border: 0 !important;
}

.input-group-append{
    border: 0 !important;
    border-color: transparent !important;
    background-color: transparent !important;
}

#send-container{
    background-color: rgba(0,0,0,0.3) !important;
}

.q0,.q1,.q2,.q3{
    border-color: white;
    border-width: 1px;
    background-color: #444444;
}

.q4{
    border-color: white;
    border-width: 1px;
    background-color: #85c2fc;
    color: #444444;
}


.jumbotron{
    background-image: url("/img/bg.jpg");   
    background-position: 50%;
    background-color: rgba(255, 255, 255, 0.60);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    color: #fff;
}

.demo-text{
    border-radius: 10px;
    background-color: rgba(255,255,255,0.9);
    margin: 10px;
}

@media(max-width: 768px)
{
    .contacts_card{
        margin-bottom: 15px !important;
    }
    .chat{
        position: fixed;
        bottom: 0;
        right: 0;
        margin-top: 0;
        margin-right: 10px;
        width: 60%;
        height: 80%;
        opacity: 0;
    }
    
}

